[Extensions] Fixes Zero State Promo IPH layout issue.
The WebUI based Extensions Zero State Promo IPH, plain text link variant is having an issue on Mac, where the text is getting squeezed to 4 rows instead of the 3 in the UI mock: https://screenshot.googleplex.com/39YCddo3YsTi2pv

I believe the reason for this behavior is that text is larger on MAC, causing the 2nd row to overflow the bounds of 260px. The largest width that preserves the correct break off is 267px.

Screenshot of fixed page (MAC): https://screenshot.googleplex.com/3SPRnbHKWEUEbqp

Bug: 409573170
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6669376
Commit-Queue: Yiming Zhou <uwyiming@google.com>
Cr-Commit-Position: refs/heads/main@{#1479563}

--- a/chrome/browser/resources/extensions_zero_state_promo/zero_state_promo_app.css
+++ b/chrome/browser/resources/extensions_zero_state_promo/zero_state_promo_app.css
@@ -16,7 +16,6 @@
   --zero-state-promo-background-color: var(--color-button-foreground);
   --zero-state-promo-foreground-color: var(--color-button-background);
   --container-gap: 8px;
-  --top-container-padding: 20px;
 
   border-radius: 12px;
   display: flex;
@@ -41,7 +40,7 @@
   font-weight: 500;
   line-height: 24px;
   margin: 0px;
-  width: calc(100% - var(--top-container-padding) * 2);
+  width: 260px;
 }
 
 #dismissButton {
@@ -76,7 +75,7 @@
   font-size: 14px;
   line-height: 20px;
   padding-top: 4px;
-  width: calc(100% - var(--top-container-padding) * 2);
+  width: 267px;
 }
 
 #anchorContainer a {
